src/parse/parsetiger.output
Terminals unused in grammar

    "class"
    "extends"
    "<"
    "method"
    "new"
    ";"


Grammar

    0 $accept: program "end of file"

    1 program: exp
    2        | chunks

    3 list_id: list_id "," list_id
    4        | "identifier" "=" exp

    5 list_exp: list_exp "," list_exp
    6         | exp

    7 exps: ε
    8     | list_exp

    9 exp: "nil"
   10    | "integer"
   11    | "string"
   12    | typeid "{" list_id "}"
   13    | typeid "{" "}"
   14    | lvalue
   15    | "identifier" "(" ")"
   16    | "identifier" "(" list_exp ")"
   17    | exp "|" exp
   18    | exp "&" exp
   19    | exp "<=" exp
   20    | exp "=" exp
   21    | exp "<>" exp
   22    | exp ">" exp
   23    | exp ">=" exp
   24    | "-" exp
   25    | exp "+" exp
   26    | exp "-" exp
   27    | exp "*" exp
   28    | exp "/" exp
   29    | "(" exps ")"
   30    | lvalue ":=" exp
   31    | "if" exp "then" exp
   32    | "if" exp "then" exp "else" exp
   33    | "while" exp "do" exp
   34    | "for" "identifier" ":=" exp "to" exp "do" exp
   35    | "break"
   36    | "let" chunks "in" exps "end"
   37    | "_cast" "(" exp "," ty ")"
   38    | "_exp" "(" "integer" ")"

   39 lvalue: "identifier"
   40       | lvalue "." "identifier"
   41       | lvalue "[" exp "]"

   42 chunks: ε
   43       | tychunk chunks
   44       | funchunk chunks
   45       | varchunk chunks
   46       | "import" "string" chunks

   47 tychunk: tydec
   48        | tydec tychunk

   49 funchunk: fundec
   50         | fundec funchunk

   51 varchunk: vardec

   52 vardec: "var" "identifier" ":=" exp
   53       | "var" "identifier" ":" typeid ":=" exp

   54 tydec: "type" "identifier" "=" ty

   55 fundec: "function" "identifier" "(" tyfields ")" ":" typeid "=" exp
   56       | "primitive" "identifier" "(" tyfields ")" ":" typeid

   57 ty: typeid
   58   | "{" tyfields "}"
   59   | "array" "of" typeid

   60 tyfields: ε
   61         | tyfields.1

   62 tyfields.1: tyfields.1 "," tyfield
   63           | tyfield

   64 tyfield: "identifier" ":" typeid

   65 typeid: "identifier"
   66       | "_namety" "(" "integer" ")"


Terminals, with rules where they appear

    "end of file" (0) 0
    error (256)
    "string" <std::string> (258) 11 46
    "identifier" <misc::symbol> (259) 4 15 16 34 39 40 52 53 54 55 56 64 65
    "integer" <int> (260) 10 38 66
    "&" (261) 18
    "array" (262) 59
    ":=" (263) 30 34 52 53
    "break" (264) 35
    "_cast" (265) 37
    "class" (266)
    ":" (267) 53 55 56 64
    "," (268) 3 5 37 62
    "/" (269) 28
    "do" (270) 33 34
    "." (271) 40
    "else" (272) 32
    "end" (273) 36
    "=" (274) 4 20 54 55
    "extends" (275)
    "for" (276) 34
    "function" (277) 55
    ">=" (278) 23
    ">" (279) 22
    "if" (280) 31 32
    "import" (281) 46
    "in" (282) 36
    "{" (283) 12 13 58
    "[" (284) 41
    "<=" (285) 19
    "let" (286) 36
    "(" (287) 15 16 29 37 38 55 56 66
    "<" (288)
    "-" (289) 24 26
    "method" (290)
    "<>" (291) 21
    "new" (292)
    "nil" (293) 9
    "of" (294) 59
    "|" (295) 17
    "+" (296) 25
    "primitive" (297) 56
    "}" (298) 12 13 58
    "]" (299) 41
    ")" (300) 15 16 29 37 38 55 56 66
    ";" (301)
    "then" (302) 31 32
    "*" (303) 27
    "to" (304) 34
    "type" (305) 54
    "var" (306) 52 53
    "while" (307) 33
    "_exp" (308) 38
    "_chunks" (309)
    "_namety" (310) 66


Nonterminals, with rules where they appear

    $accept (56)
        on left: 0
    program (57)
        on left: 1 2
        on right: 0
    list_id (58)
        on left: 3 4
        on right: 3 12
    list_exp (59)
        on left: 5 6
        on right: 5 8 16
    exps (60)
        on left: 7 8
        on right: 29 36
    exp (61)
        on left: 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38
        on right: 1 4 6 17 18 19 20 21 22 23 24 25 26 27 28 30 31 32 33 34 37 41 52 53 55
    lvalue (62)
        on left: 39 40 41
        on right: 14 30 40 41
    chunks (63)
        on left: 42 43 44 45 46
        on right: 2 36 43 44 45 46
    tychunk (64)
        on left: 47 48
        on right: 43 48
    funchunk (65)
        on left: 49 50
        on right: 44 50
    varchunk (66)
        on left: 51
        on right: 45
    vardec (67)
        on left: 52 53
        on right: 51
    tydec (68)
        on left: 54
        on right: 47 48
    fundec (69)
        on left: 55 56
        on right: 49 50
    ty (70)
        on left: 57 58 59
        on right: 37 54
    tyfields (71)
        on left: 60 61
        on right: 55 56 58
    tyfields.1 (72)
        on left: 62 63
        on right: 61 62
    tyfield (73)
        on left: 64
        on right: 62 63
    typeid (74)
        on left: 65 66
        on right: 12 13 53 55 56 57 59 64


State 0

    0 $accept: • program "end of file"
    1 program: • exp
    2        | • chunks
    9 exp: • "nil"
   10    | • "integer"
   11    | • "string"
   12    | • typeid "{" list_id "}"
   13    | • typeid "{" "}"
   14    | • lvalue
   15    | • "identifier" "(" ")"
   16    | • "identifier" "(" list_exp ")"
   17    | • exp "|" exp
   18    | • exp "&" exp
   19    | • exp "<=" exp
   20    | • exp "=" exp
   21    | • exp "<>" exp
   22    | • exp ">" exp
   23    | • exp ">=" exp
   24    | • "-" exp
   25    | • exp "+" exp
   26    | • exp "-" exp
   27    | • exp "*" exp
   28    | • exp "/" exp
   29    | • "(" exps ")"
   30    | • lvalue ":=" exp
   31    | • "if" exp "then" exp
   32    | • "if" exp "then" exp "else" exp
   33    | • "while" exp "do" exp
   34    | • "for" "identifier" ":=" exp "to" exp "do" exp
   35    | • "break"
   36    | • "let" chunks "in" exps "end"
   37    | • "_cast" "(" exp "," ty ")"
   38    | • "_exp" "(" "integer" ")"
   39 lvalue: • "identifier"
   40       | • lvalue "." "identifier"
   41       | • lvalue "[" exp "]"
   42 chunks: ε •  ["end of file"]
   43       | • tychunk chunks
   44       | • funchunk chunks
   45       | • varchunk chunks
   46       | • "import" "string" chunks
   47 tychunk: • tydec
   48        | • tydec tychunk
   49 funchunk: • fundec
   50         | • fundec funchunk
   51 varchunk: • vardec
   52 vardec: • "var" "identifier" ":=" exp
   53       | • "var" "identifier" ":" typeid ":=" exp
   54 tydec: • "type" "identifier" "=" ty
   55 fundec: • "function" "identifier" "(" tyfields ")" ":" typeid "=" exp
   56       | • "primitive" "identifier" "(" tyfields ")" ":" typeid
   65 typeid: • "identifier"
   66       | • "_namety" "(" "integer" ")"

    "string"      shift, and go to state 1
    "identifier"  shift, and go to state 2
    "integer"     shift, and go to state 3
    "break"       shift, and go to state 4
    "_cast"       shift, and go to state 5
    "for"         shift, and go to state 6
    "function"    shift, and go to state 7
    "if"          shift, and go to state 8
    "import"      shift, and go to state 9
    "let"         shift, and go to state 10
    "("           shift, and go to state 11
    "-"           shift, and go to state 12
    "nil"         shift, and go to state 13
    "primitive"   shift, and go to state 14
    "type"        shift, and go to state 15
    "var"         shift, and go to state 16
    "while"       shift, and go to state 17
    "_exp"        shift, and go to state 18
    "_namety"     shift, and go to state 19

    $default  reduce using rule 42 (chunks)

    program   go to state 20
    exp       go to state 21
    lvalue    go to state 22
    chunks    go to state 23
    tychunk   go to state 24
    funchunk  go to state 25
    varchunk  go to state 26
    vardec    go to state 27
    tydec     go to state 28
    fundec    go to state 29
    typeid    go to state 30


State 1

   11 exp: "string" •

    $default  reduce using rule 11 (exp)


State 2

   15 exp: "identifier" • "(" ")"
   16    | "identifier" • "(" list_exp ")"
   39 lvalue: "identifier" •  ["end of file", "&", ":=", ",", "/", "do", ".", "else", "end", "=", "function", ">=", ">", "import", "in", "[", "<=", "-", "<>", "|", "+", "primitive", "}", "]", ")", "then", "*", "to", "type", "var"]
   65 typeid: "identifier" •  ["{"]

    "("  shift, and go to state 31

    "{"       reduce using rule 65 (typeid)
    $default  reduce using rule 39 (lvalue)


State 3

   10 exp: "integer" •

    $default  reduce using rule 10 (exp)


State 4

   35 exp: "break" •

    $default  reduce using rule 35 (exp)


State 5

   37 exp: "_cast" • "(" exp "," ty ")"

    "("  shift, and go to state 32


State 6

   34 exp: "for" • "identifier" ":=" exp "to" exp "do" exp

    "identifier"  shift, and go to state 33


State 7

   55 fundec: "function" • "identifier" "(" tyfields ")" ":" typeid "=" exp

    "identifier"  shift, and go to state 34


State 8

    9 exp: • "nil"
   10    | • "integer"
   11    | • "string"
   12    | • typeid "{" list_id "}"
   13    | • typeid "{" "}"
   14    | • lvalue
   15    | • "identifier" "(" ")"
   16    | • "identifier" "(" list_exp ")"
   17    | • exp "|" exp
   18    | • exp "&" exp
   19    | • exp "<=" exp
   20    | • exp "=" exp
   21    | • exp "<>" exp
   22    | • exp ">" exp
   23    | • exp ">=" exp
   24    | • "-" exp
   25    | • exp "+" exp
   26    | • exp "-" exp
   27    | • exp "*" exp
   28    | • exp "/" exp
   29    | • "(" exps ")"
   30    | • lvalue ":=" exp
   31    | • "if" exp "then" exp
   31    | "if" • exp "then" exp
   32    | • "if" exp "then" exp "else" exp
   32    | "if" • exp "then" exp "else" exp
   33    | • "while" exp "do" exp
   34    | • "for" "identifier" ":=" exp "to" exp "do" exp
   35    | • "break"
   36    | • "let" chunks "in" exps "end"
   37    | • "_cast" "(" exp "," ty ")"
   38    | • "_exp" "(" "integer" ")"
   39 lvalue: • "identifier"
   40       | • lvalue "." "identifier"
   41       | • lvalue "[" exp "]"
   65 typeid: • "identifier"
   66       | • "_namety" "(" "integer" ")"

    "string"      shift, and go to state 1
    "identifier"  shift, and go to state 2
    "integer"     shift, and go to state 3
    "break"       shift, and go to state 4
    "_cast"       shift, and go to state 5
    "for"         shift, and go to state 6
    "if"          shift, and go to state 8
    "let"         shift, and go to state 10
    "("           shift, and go to state 11
    "-"           shift, and go to state 12
    "nil"         shift, and go to state 13
    "while"       shift, and go to state 17
    "_exp"        shift, and go to state 18
    "_namety"     shift, and go to state 19

    exp     go to state 35
    lvalue  go to state 22
    typeid  go to state 30


State 9

   46 chunks: "import" • "string" chunks

    "string"  shift, and go to state 36


State 10

   36 exp: "let" • chunks "in" exps "end"
   42 chunks: ε •  ["in"]
   43       | • tychunk chunks
   44       | • funchunk chunks
   45       | • varchunk chunks
   46       | • "import" "string" chunks
   47 tychunk: • tydec
   48        | • tydec tychunk
   49 funchunk: • fundec
   50         | • fundec funchunk
   51 varchunk: • vardec
   52 vardec: • "var" "identifier" ":=" exp
   53       | • "var" "identifier" ":" typeid ":=" exp
   54 tydec: • "type" "identifier" "=" ty
   55 fundec: • "function" "identifier" "(" tyfields ")" ":" typeid "=" exp
   56       | • "primitive" "identifier" "(" tyfields ")" ":" typeid

    "function"   shift, and go to state 7
    "import"     shift, and go to state 9
    "primitive"  shift, and go to state 14
    "type"       shift, and go to state 15
    "var"        shift, and go to state 16

    $default  reduce using rule 42 (chunks)

    chunks    go to state 37
    tychunk   go to state 24
    funchunk  go to state 25
    varchunk  go to state 26
    vardec    go to state 27
    tydec     go to state 28
    fundec    go to state 29


State 11

    5 list_exp: • list_exp "," list_exp
    6         | • exp
    7 exps: ε •  [")"]
    8     | • list_exp
    9 exp: • "nil"
   10    | • "integer"
   11    | • "string"
   12    | • typeid "{" list_id "}"
   13    | • typeid "{" "}"
   14    | • lvalue
   15    | • "identifier" "(" ")"
   16    | • "identifier" "(" list_exp ")"
   17    | • exp "|" exp
   18    | • exp "&" exp
   19    | • exp "<=" exp
   20    | • exp "=" exp
   21    | • exp "<>" exp
   22    | • exp ">" exp
   23    | • exp ">=" exp
   24    | • "-" exp
   25    | • exp "+" exp
   26    | • exp "-" exp
   27    | • exp "*" exp
   28    | • exp "/" exp
   29    | • "(" exps ")"
   29    | "(" • exps ")"
   30    | • lvalue ":=" exp
   31    | • "if" exp "then" exp
   32    | • "if" exp "then" exp "else" exp
   33    | • "while" exp "do" exp
   34    | • "for" "identifier" ":=" exp "to" exp "do" exp
   35    | • "break"
   36    | • "let" chunks "in" exps "end"
   37    | • "_cast" "(" exp "," ty ")"
   38    | • "_exp" "(" "integer" ")"
   39 lvalue: • "identifier"
   40       | • lvalue "." "identifier"
   41       | • lvalue "[" exp "]"
   65 typeid: • "identifier"
   66       | • "_namety" "(" "integer" ")"

    "string"      shift, and go to state 1
    "identifier"  shift, and go to state 2
    "integer"     shift, and go to state 3
    "break"       shift, and go to state 4
    "_cast"       shift, and go to state 5
    "for"         shift, and go to state 6
    "if"          shift, and go to state 8
    "let"         shift, and go to state 10
    "("           shift, and go to state 11
    "-"           shift, and go to state 12
    "nil"         shift, and go to state 13
    "while"       shift, and go to state 17
    "_exp"        shift, and go to state 18
    "_namety"     shift, and go to state 19

    $default  reduce using rule 7 (exps)

    list_exp  go to state 38
    exps      go to state 39
    exp       go to state 40
    lvalue    go to state 22
    typeid    go to state 30


State 12

    9 exp: • "nil"
   10    | • "integer"
   11    | • "string"
   12    | • typeid "{" list_id "}"
   13    | • typeid "{" "}"
   14    | • lvalue
   15    | • "identifier" "(" ")"
   16    | • "identifier" "(" list_exp ")"
   17    | • exp "|" exp
   18    | • exp "&" exp
   19    | • exp "<=" exp
   20    | • exp "=" exp
   21    | • exp "<>" exp
   22    | • exp ">" exp
   23    | • exp ">=" exp
   24    | • "-" exp
   24    | "-" • exp
   25    | • exp "+" exp
   26    | • exp "-" exp
   27    | • exp "*" exp
   28    | • exp "/" exp
   29    | • "(" exps ")"
   30    | • lvalue ":=" exp
   31    | • "if" exp "then" exp
   32    | • "if" exp "then" exp "else" exp
   33    | • "while" exp "do" exp
   34    | • "for" "identifier" ":=" exp "to" exp "do" exp
   35    | • "break"
   36    | • "let" chunks "in" exps "end"
   37    | • "_cast" "(" exp "," ty ")"
   38    | • "_exp" "(" "integer" ")"
   39 lvalue: • "identifier"
   40       | • lvalue "." "identifier"
   41       | • lvalue "[" exp "]"
   65 typeid: • "identifier"
   66       | • "_namety" "(" "integer" ")"

    "string"      shift, and go to state 1
    "identifier"  shift, and go to state 2
    "integer"     shift, and go to state 3
    "break"       shift, and go to state 4
    "_cast"       shift, and go to state 5
    "for"         shift, and go to state 6
    "if"          shift, and go to state 8
    "let"         shift, and go to state 10
    "("           shift, and go to state 11
    "-"           shift, and go to state 12
    "nil"         shift, and go to state 13
    "while"       shift, and go to state 17
    "_exp"        shift, and go to state 18
    "_namety"     shift, and go to state 19

    exp     go to state 41
    lvalue  go to state 22
    typeid  go to state 30


State 13

    9 exp: "nil" •

    $default  reduce using rule 9 (exp)


State 14

   56 fundec: "primitive" • "identifier" "(" tyfields ")" ":" typeid

    "identifier"  shift, and go to state 42


State 15

   54 tydec: "type" • "identifier" "=" ty

    "identifier"  shift, and go to state 43


State 16

   52 vardec: "var" • "identifier" ":=" exp
   53       | "var" • "identifier" ":" typeid ":=" exp

    "identifier"  shift, and go to state 44


State 17

    9 exp: • "nil"
   10    | • "integer"
   11    | • "string"
   12    | • typeid "{" list_id "}"
   13    | • typeid "{" "}"
   14    | • lvalue
   15    | • "identifier" "(" ")"
   16    | • "identifier" "(" list_exp ")"
   17    | • exp "|" exp
   18    | • exp "&" exp
   19    | • exp "<=" exp
   20    | • exp "=" exp
   21    | • exp "<>" exp
   22    | • exp ">" exp
   23    | • exp ">=" exp
   24    | • "-" exp
   25    | • exp "+" exp
   26    | • exp "-" exp
   27    | • exp "*" exp
   28    | • exp "/" exp
   29    | • "(" exps ")"
   30    | • lvalue ":=" exp
   31    | • "if" exp "then" exp
   32    | • "if" exp "then" exp "else" exp
   33    | • "while" exp "do" exp
   33    | "while" • exp "do" exp
   34    | • "for" "identifier" ":=" exp "to" exp "do" exp
   35    | • "break"
   36    | • "let" chunks "in" exps "end"
   37    | • "_cast" "(" exp "," ty ")"
   38    | • "_exp" "(" "integer" ")"
   39 lvalue: • "identifier"
   40       | • lvalue "." "identifier"
   41       | • lvalue "[" exp "]"
   65 typeid: • "identifier"
   66       | • "_namety" "(" "integer" ")"

    "string"      shift, and go to state 1
    "identifier"  shift, and go to state 2
    "integer"     shift, and go to state 3
    "break"       shift, and go to state 4
    "_cast"       shift, and go to state 5
    "for"         shift, and go to state 6
    "if"          shift, and go to state 8
    "let"         shift, and go to state 10
    "("           shift, and go to state 11
    "-"           shift, and go to state 12
    "nil"         shift, and go to state 13
    "while"       shift, and go to state 17
    "_exp"        shift, and go to state 18
    "_namety"     shift, and go to state 19

    exp     go to state 45
    lvalue  go to state 22
    typeid  go to state 30


State 18

   38 exp: "_exp" • "(" "integer" ")"

    "("  shift, and go to state 46


State 19

   66 typeid: "_namety" • "(" "integer" ")"

    "("  shift, and go to state 47


State 20

    0 $accept: program • "end of file"

    "end of file"  shift, and go to state 48


State 21

    1 program: exp •  ["end of file"]
   17 exp: exp • "|" exp
   18    | exp • "&" exp
   19    | exp • "<=" exp
   20    | exp • "=" exp
   21    | exp • "<>" exp
   22    | exp • ">" exp
   23    | exp • ">=" exp
   25    | exp • "+" exp
   26    | exp • "-" exp
   27    | exp • "*" exp
   28    | exp • "/" exp

    "&"   shift, and go to state 49
    "/"   shift, and go to state 50
    "="   shift, and go to state 51
    ">="  shift, and go to state 52
    ">"   shift, and go to state 53
    "<="  shift, and go to state 54
    "-"   shift, and go to state 55
    "<>"  shift, and go to state 56
    "|"   shift, and go to state 57
    "+"   shift, and go to state 58
    "*"   shift, and go to state 59

    $default  reduce using rule 1 (program)


State 22

   14 exp: lvalue •  ["end of file", "&", ",", "/", "do", "else", "end", "=", "function", ">=", ">", "import", "in", "<=", "-", "<>", "|", "+", "primitive", "}", "]", ")", "then", "*", "to", "type", "var"]
   30    | lvalue • ":=" exp
   40 lvalue: lvalue • "." "identifier"
   41       | lvalue • "[" exp "]"

    ":="  shift, and go to state 60
    "."   shift, and go to state 61
    "["   shift, and go to state 62

    $default  reduce using rule 14 (exp)


State 23

    2 program: chunks •

    $default  reduce using rule 2 (program)


State 24

   42 chunks: ε •  ["end of file", "in"]
   43       | • tychunk chunks
   43       | tychunk • chunks
   44       | • funchunk chunks
   45       | • varchunk chunks
   46       | • "import" "string" chunks
   47 tychunk: • tydec
   48        | • tydec tychunk
   49 funchunk: • fundec
   50         | • fundec funchunk
   51 varchunk: • vardec
   52 vardec: • "var" "identifier" ":=" exp
   53       | • "var" "identifier" ":" typeid ":=" exp
   54 tydec: • "type" "identifier" "=" ty
   55 fundec: • "function" "identifier" "(" tyfields ")" ":" typeid "=" exp
   56       | • "primitive" "identifier" "(" tyfields ")" ":" typeid

    "function"   shift, and go to state 7
    "import"     shift, and go to state 9
    "primitive"  shift, and go to state 14
    "type"       shift, and go to state 15
    "var"        shift, and go to state 16

    $default  reduce using rule 42 (chunks)

    chunks    go to state 63
    tychunk   go to state 24
    funchunk  go to state 25
    varchunk  go to state 26
    vardec    go to state 27
    tydec     go to state 28
    fundec    go to state 29


State 25

   42 chunks: ε •  ["end of file", "in"]
   43       | • tychunk chunks
   44       | • funchunk chunks
   44       | funchunk • chunks
   45       | • varchunk chunks
   46       | • "import" "string" chunks
   47 tychunk: • tydec
   48        | • tydec tychunk
   49 funchunk: • fundec
   50         | • fundec funchunk
   51 varchunk: • vardec
   52 vardec: • "var" "identifier" ":=" exp
   53       | • "var" "identifier" ":" typeid ":=" exp
   54 tydec: • "type" "identifier" "=" ty
   55 fundec: • "function" "identifier" "(" tyfields ")" ":" typeid "=" exp
   56       | • "primitive" "identifier" "(" tyfields ")" ":" typeid

    "function"   shift, and go to state 7
    "import"     shift, and go to state 9
    "primitive"  shift, and go to state 14
    "type"       shift, and go to state 15
    "var"        shift, and go to state 16

    $default  reduce using rule 42 (chunks)

    chunks    go to state 64
    tychunk   go to state 24
    funchunk  go to state 25
    varchunk  go to state 26
    vardec    go to state 27
    tydec     go to state 28
    fundec    go to state 29


State 26

   42 chunks: ε •  ["end of file", "in"]
   43       | • tychunk chunks
   44       | • funchunk chunks
   45       | • varchunk chunks
   45       | varchunk • chunks
   46       | • "import" "string" chunks
   47 tychunk: • tydec
   48        | • tydec tychunk
   49 funchunk: • fundec
   50         | • fundec funchunk
   51 varchunk: • vardec
   52 vardec: • "var" "identifier" ":=" exp
   53       | • "var" "identifier" ":" typeid ":=" exp
   54 tydec: • "type" "identifier" "=" ty
   55 fundec: • "function" "identifier" "(" tyfields ")" ":" typeid "=" exp
   56       | • "primitive" "identifier" "(" tyfields ")" ":" typeid

    "function"   shift, and go to state 7
    "import"     shift, and go to state 9
    "primitive"  shift, and go to state 14
    "type"       shift, and go to state 15
    "var"        shift, and go to state 16

    $default  reduce using rule 42 (chunks)

    chunks    go to state 65
    tychunk   go to state 24
    funchunk  go to state 25
    varchunk  go to state 26
    vardec    go to state 27
    tydec     go to state 28
    fundec    go to state 29


State 27

   51 varchunk: vardec •

    $default  reduce using rule 51 (varchunk)


State 28

   47 tychunk: • tydec
   47        | tydec •  ["end of file", "function", "import", "in", "primitive", "var"]
   48        | • tydec tychunk
   48        | tydec • tychunk
   54 tydec: • "type" "identifier" "=" ty

    "type"  shift, and go to state 15

    $default  reduce using rule 47 (tychunk)

    tychunk  go to state 66
    tydec    go to state 28

    Conflict between rule 47 and token "type" resolved as shift ("_chunks" < "type").


State 29

   49 funchunk: • fundec
   49         | fundec •  ["end of file", "import", "in", "type", "var"]
   50         | • fundec funchunk
   50         | fundec • funchunk
   55 fundec: • "function" "identifier" "(" tyfields ")" ":" typeid "=" exp
   56       | • "primitive" "identifier" "(" tyfields ")" ":" typeid

    "function"   shift, and go to state 7
    "primitive"  shift, and go to state 14

    $default  reduce using rule 49 (funchunk)

    funchunk  go to state 67
    fundec    go to state 29

    Conflict between rule 49 and token "function" resolved as shift ("_chunks" < "function").
    Conflict between rule 49 and token "primitive" resolved as shift ("_chunks" < "primitive").


State 30

   12 exp: typeid • "{" list_id "}"
   13    | typeid • "{" "}"

    "{"  shift, and go to state 68


State 31

    5 list_exp: • list_exp "," list_exp
    6         | • exp
    9 exp: • "nil"
   10    | • "integer"
   11    | • "string"
   12    | • typeid "{" list_id "}"
   13    | • typeid "{" "}"
   14    | • lvalue
   15    | • "identifier" "(" ")"
   15    | "identifier" "(" • ")"
   16    | • "identifier" "(" list_exp ")"
   16    | "identifier" "(" • list_exp ")"
   17    | • exp "|" exp
   18    | • exp "&" exp
   19    | • exp "<=" exp
   20    | • exp "=" exp
   21    | • exp "<>" exp
   22    | • exp ">" exp
   23    | • exp ">=" exp
   24    | • "-" exp
   25    | • exp "+" exp
   26    | • exp "-" exp
   27    | • exp "*" exp
   28    | • exp "/" exp
   29    | • "(" exps ")"
   30    | • lvalue ":=" exp
   31    | • "if" exp "then" exp
   32    | • "if" exp "then" exp "else" exp
   33    | • "while" exp "do" exp
   34    | • "for" "identifier" ":=" exp "to" exp "do" exp
   35    | • "break"
   36    | • "let" chunks "in" exps "end"
   37    | • "_cast" "(" exp "," ty ")"
   38    | • "_exp" "(" "integer" ")"
   39 lvalue: • "identifier"
   40       | • lvalue "." "identifier"
   41       | • lvalue "[" exp "]"
   65 typeid: • "identifier"
   66       | • "_namety" "(" "integer" ")"

    "string"      shift, and go to state 1
    "identifier"  shift, and go to state 2
    "integer"     shift, and go to state 3
    "break"       shift, and go to state 4
    "_cast"       shift, and go to state 5
    "for"         shift, and go to state 6
    "if"          shift, and go to state 8
    "let"         shift, and go to state 10
    "("           shift, and go to state 11
    "-"           shift, and go to state 12
    "nil"         shift, and go to state 13
    ")"           shift, and go to state 69
    "while"       shift, and go to state 17
    "_exp"        shift, and go to state 18
    "_namety"     shift, and go to state 19

    list_exp  go to state 70
    exp       go to state 40
    lvalue    go to state 22
    typeid    go to state 30


State 32

    9 exp: • "nil"
   10    | • "integer"
   11    | • "string"
   12    | • typeid "{" list_id "}"
   13    | • typeid "{" "}"
   14    | • lvalue
   15    | • "identifier" "(" ")"
   16    | • "identifier" "(" list_exp ")"
   17    | • exp "|" exp
   18    | • exp "&" exp
   19    | • exp "<=" exp
   20    | • exp "=" exp
   21    | • exp "<>" exp
   22    | • exp ">" exp
   23    | • exp ">=" exp
   24    | • "-" exp
   25    | • exp "+" exp
   26    | • exp "-" exp
   27    | • exp "*" exp
   28    | • exp "/" exp
   29    | • "(" exps ")"
   30    | • lvalue ":=" exp
   31    | • "if" exp "then" exp
   32    | • "if" exp "then" exp "else" exp
   33    | • "while" exp "do" exp
   34    | • "for" "identifier" ":=" exp "to" exp "do" exp
   35    | • "break"
   36    | • "let" chunks "in" exps "end"
   37    | • "_cast" "(" exp "," ty ")"
   37    | "_cast" "(" • exp "," ty ")"
   38    | • "_exp" "(" "integer" ")"
   39 lvalue: • "identifier"
   40       | • lvalue "." "identifier"
   41       | • lvalue "[" exp "]"
   65 typeid: • "identifier"
   66       | • "_namety" "(" "integer" ")"

    "string"      shift, and go to state 1
    "identifier"  shift, and go to state 2
    "integer"     shift, and go to state 3
    "break"       shift, and go to state 4
    "_cast"       shift, and go to state 5
    "for"         shift, and go to state 6
    "if"          shift, and go to state 8
    "let"         shift, and go to state 10
    "("           shift, and go to state 11
    "-"           shift, and go to state 12
    "nil"         shift, and go to state 13
    "while"       shift, and go to state 17
    "_exp"        shift, and go to state 18
    "_namety"     shift, and go to state 19

    exp     go to state 71
    lvalue  go to state 22
    typeid  go to state 30


State 33

   34 exp: "for" "identifier" • ":=" exp "to" exp "do" exp

    ":="  shift, and go to state 72


State 34

   55 fundec: "function" "identifier" • "(" tyfields ")" ":" typeid "=" exp

    "("  shift, and go to state 73


State 35

   17 exp: exp • "|" exp
   18    | exp • "&" exp
   19    | exp • "<=" exp
   20    | exp • "=" exp
   21    | exp • "<>" exp
   22    | exp • ">" exp
   23    | exp • ">=" exp
   25    | exp • "+" exp
   26    | exp • "-" exp
   27    | exp • "*" exp
   28    | exp • "/" exp
   31    | "if" exp • "then" exp
   32    | "if" exp • "then" exp "else" exp

    "&"     shift, and go to state 49
    "/"     shift, and go to state 50
    "="     shift, and go to state 51
    ">="    shift, and go to state 52
    ">"     shift, and go to state 53
    "<="    shift, and go to state 54
    "-"     shift, and go to state 55
    "<>"    shift, and go to state 56
    "|"     shift, and go to state 57
    "+"     shift, and go to state 58
    "then"  shift, and go to state 74
    "*"     shift, and go to state 59


State 36

   42 chunks: ε •  ["end of file", "in"]
   43       | • tychunk chunks
   44       | • funchunk chunks
   45       | • varchunk chunks
   46       | • "import" "string" chunks
   46       | "import" "string" • chunks
   47 tychunk: • tydec
   48        | • tydec tychunk
   49 funchunk: • fundec
   50         | • fundec funchunk
   51 varchunk: • vardec
   52 vardec: • "var" "identifier" ":=" exp
   53       | • "var" "identifier" ":" typeid ":=" exp
   54 tydec: • "type" "identifier" "=" ty
   55 fundec: • "function" "identifier" "(" tyfields ")" ":" typeid "=" exp
   56       | • "primitive" "identifier" "(" tyfields ")" ":" typeid

    "function"   shift, and go to state 7
    "import"     shift, and go to state 9
    "primitive"  shift, and go to state 14
    "type"       shift, and go to state 15
    "var"        shift, and go to state 16

    $default  reduce using rule 42 (chunks)

    chunks    go to state 75
    tychunk   go to state 24
    funchunk  go to state 25
    varchunk  go to state 26
    vardec    go to state 27
    tydec     go to state 28
    fundec    go to state 29


State 37

   36 exp: "let" chunks • "in" exps "end"

    "in"  shift, and go to state 76


State 38

    5 list_exp: list_exp • "," list_exp
    8 exps: list_exp •  ["end", ")"]

    ","  shift, and go to state 77

    $default  reduce using rule 8 (exps)


State 39

   29 exp: "(" exps • ")"

    ")"  shift, and go to state 78


State 40

    6 list_exp: exp •  [",", "end", ")"]
   17 exp: exp • "|" exp
   18    | exp • "&" exp
   19    | exp • "<=" exp
   20    | exp • "=" exp
   21    | exp • "<>" exp
   22    | exp • ">" exp
   23    | exp • ">=" exp
   25    | exp • "+" exp
   26    | exp • "-" exp
   27    | exp • "*" exp
   28    | exp • "/" exp

    "&"   shift, and go to state 49
    "/"   shift, and go to state 50
    "="   shift, and go to state 51
    ">="  shift, and go to state 52
    ">"   shift, and go to state 53
    "<="  shift, and go to state 54
    "-"   shift, and go to state 55
    "<>"  shift, and go to state 56
    "|"   shift, and go to state 57
    "+"   shift, and go to state 58
    "*"   shift, and go to state 59

    $default  reduce using rule 6 (list_exp)


State 41

   17 exp: exp • "|" exp
   18    | exp • "&" exp
   19    | exp • "<=" exp
   20    | exp • "=" exp
   21    | exp • "<>" exp
   22    | exp • ">" exp
   23    | exp • ">=" exp
   24    | "-" exp •  ["end of file", "&", ",", "do", "else", "end", "=", "function", ">=", ">", "import", "in", "<=", "-", "<>", "|", "+", "primitive", "}", "]", ")", "then", "to", "type", "var"]
   25    | exp • "+" exp
   26    | exp • "-" exp
   27    | exp • "*" exp
   28    | exp • "/" exp

    "/"  shift, and go to state 50
    "*"  shift, and go to state 59

    $default  reduce using rule 24 (exp)
